package com.mywork.expert.pojo;

import java.io.Serializable;

public class Expert implements Serializable {


}
